@@ -95,6 +95,14 @@ LINK32=link.exe
 # PROP Default_Filter "cpp;c;cxx;rc;def;r;odl;idl;hpj;bat"
 # Begin Source File
 
+SOURCE=..\src\inet_ntop.c
+# End Source File
+# Begin Source File
+
+SOURCE=..\src\inet_pton.c
+# End Source File
+# Begin Source File
+
 SOURCE=.\libwzd.def
 # End Source File
 # Begin Source File
