@@ -1,3 +1,8 @@
+2004-01-08  Pierre Chifflier  <pollux@wzdftpd.net>
+
+	* visual: fix build, IPv6 code compiles (though win2k does not support ipv6)
+	* visual: clean up threads when client exit
+
 2004-01-07  Pierre Chifflier  <pollux@wzdftpd.net>
 
 	* wzd_misc.c: fix incorrect free space size reported
